--- a/src/app/hotels/hotels.component.css
+++ b/src/app/hotels/hotels.component.css
@@ -1,9 +1,122 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  margin-left: 1rem;
+* {
+    box-sizing: border-box;
 }
 
-.title {
-  color: rgba(57, 119, 175, 1);
+.flex_container {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(244, 244, 244, 1);
+    padding: 20px;
+}
+
+.side {
+    flex: 25%;
+    padding: 10px;
+}
+
+.main {
+    flex: 75%;
+    padding: 10px;
+}
+
+.fakeimg {
+    background-color: #aaa;
+    padding: 100px;
+    width: 100%;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    padding: 10px;
+    margin: 10px;
+}
+
+.wrap {
+    flex-wrap: wrap;
+}
+
+.nowrap {
+    flex-wrap: nowrap;
+}
+
+.row {
+    display: flex;
+}
+
+.center {
+    justify-content: center;
+}
+
+.left {
+    justify-content: flex-start;
+}
+
+.right {
+    justify-content: flex-end;
+}
+
+.between {
+    justify-content: space-between;
+}
+
+.around {
+    justify-content: space-around;
+}
+
+.middle {
+    align-items: center;
+}
+
+.top {
+    align-items: flex-start;
+}
+
+.baseline {
+    align-items: baseline;
+}
+
+.column {
+    flex-direction: column;
+}
+
+
+/* On mouse-over, add a deeper shadow */
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.botton {
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #ffffff;
+    background-color: rgba(15, 41, 116, 1);
+    max-width: 20rem;
+    min-width: 10rem;
+    border-radius: 6px;
+}
+
+.text_color {
+    color: rgba(235, 137, 35, 1);
+    font-size: 8.5rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.text_size {
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+
+@media screen and (max-width: 700px) {
+    .flex_container,
+    .row {
+        flex-direction: column;
+    }
 }
