--- a/src/app/hotels/hotels.component.html
+++ b/src/app/hotels/hotels.component.html
@@ -1,11 +1,64 @@
-<ng-container *ngFor="let hotel of data">
-    <app-card></app-card>
-    <div>
-        <img  [src]="(hotel.image | images  ) | safeImage" alt="Image">
+<!-- <div class="row wrap">
+    <div class="card filter">
+        <span>Filtros</span>
     </div>
-    <div class="container">
-      <span class="title">{{hotel.name}}</span>
-      <app-stars [value]="hotel.stars" [sm]="true" ></app-stars>
-      <app-stars [icons]="hotel.amenities"></app-stars>
+    <div class="box">
+        <div class="card" *ngFor="let hotel of data">
+            <div class="container">
+                <div>
+                    <figure class="img">
+                        <img [src]="(hotel.image | images  ) | safeImage" alt="Image">
+                    </figure>
+                </div>
+                <div class="row column left">
+                    <span class="title">{{hotel.name}}</span>
+                    <app-stars [value]="hotel.stars" [sm]="true"></app-stars>
+                    <app-stars [icons]="hotel.amenities"></app-stars>
+                </div>
+                <div class="row column center middle">
+                    <ng-container>
+                        <span>Precio por noche habitación</span>
+                        <p class="row baseline">
+                            <span>{{typeMoney}} </span>
+                            <span class="text_size">{{hotel.price.$numberDecimal}}</span>
+                        </p>
+                    </ng-container>
+                    <a class="botton">Ver hotel</a>
+                </div>
+            </div>
+        </div>
     </div>
-</ng-container>
+</div> -->
+
+<div class="flex_container">
+    <div class="side">
+        <div class="card">Filtros
+            <!-- <h3>Filtros</h3> -->
+        </div>
+        <div class="card">Nombre del hotel</div>
+        <div class="card">Estrellas</div>
+    </div>
+
+    <div class="main">
+        <div class="card" *ngFor="let hotel of data">
+            <div class="row">
+                <div class="fakeimg" style="flex:25">Image</div>
+                <div class="row column" style="flex:50; margin-left: 1rem;">
+                    <h3 class="title">{{hotel.name}}</h3>
+                    <app-stars [value]="hotel.stars" [sm]="true"></app-stars>
+                    <app-stars [icons]="hotel.amenities"></app-stars>
+                </div>
+                <div class="row column center middle" style="flex:25">
+                    <ng-container>
+                        <span><h4>Precio por noche habitación</h4></span>
+                        <p class="">
+                            <span>{{typeMoney}} </span>
+                            <span class="text_size">{{hotel.price.$numberDecimal}}</span>
+                        </p>
+                    </ng-container>
+                    <a class="botton">Ver hotel</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
