--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,10 +1,13 @@
 .header {
-  overflow: hidden;
-  background-color: #063a7e;
-  padding: 0.5rem;
-  margin: 0;
+    overflow: hidden;
+    background-color: #063a7e;
+    padding: 0.5rem;
+    margin: 0;
+    height: 6.5rem;
+    display: flex;
+    align-items: center;
 }
 
 .logo {
-  max-width: 40vw;
+    width: 22rem;
 }
