--- a/src/app/stars/stars.component.css
+++ b/src/app/stars/stars.component.css
@@ -1,8 +1,9 @@
 .icon {
-  max-width: 1.5vw;
-  fill: yellow;
+    max-width: 30px;
+    margin-bottom: 0rem;
+    fill: yellow;
 }
 
 .size {
-  max-width: 1vw;
+    max-width: 15px;
 }
