--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,11 @@
 .header {
-    overflow: hidden;
     background-color: #063a7e;
     padding: 0.5rem;
     margin: 0;
-    height: 6.5rem;
-    display: flex;
-    align-items: center;
+    height: 4rem;
+    width:100%;
 }
 
 .logo {
-    width: 22rem;
+    height: 100%;
 }
