--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  margin: 0
+  margin: 0;
+}
+
+app-root {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
