--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,4 @@
 <header>
-  <div class="header">
-      <img class="logo" [alt]="alt" [src]="logo">
-  </div>
+  <img class="logo" [alt]="alt" [src]="logo"/>
 </header>
   
