--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,8 @@
-.header {
+header {
     background-color: #063a7e;
     padding: 0.5rem;
     margin: 0;
-    height: 4rem;
+    height: 100%;
     width:100%;
 }
 
