--- a/src/styles.css
+++ b/src/styles.css
@@ -6,5 +6,13 @@ body {
 app-root {
   width: 100%;
   height: 100%;
+  display: grid;
   position: relative;
+}
+
+app-header {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 4rem;
 }
