--- a/src/app/hotels/hotels.component.html
+++ b/src/app/hotels/hotels.component.html
@@ -1,47 +1,50 @@
 <div class="flex_container">
-    <div class="side">
-        <div class="card">
-            <h3 class="margin_off">Filtros</h3>
-            <!-- <h3>Filtros</h3> -->
+    <div class="side" (window:resize)="resize_card()" [ngClass]="customInnerWidth && customInnerWidth<=600 ? 'card_collapsed' : ''">
+        <div class="card side_title" (click)="collapseCard($event.target)">
+            <h3 class="margin_off">{{customInnerWidth>600 ? 'Filtros': 'Filtrar'}}</h3>
+            <span class="arrow_down" *ngIf="customInnerWidth<=600"></span>
         </div>
-        <div class="card" (window:resize)="resize_card()" [ngClass]="customInnerWidth && customInnerWidth<=600 ? 'card_collapsed' : ''">
-            <div class="title_filter" (click)="collapseCard($event.target)">
-                <div class="width_100">
-                    <app-stars [value]=1 [sm]="true"></app-stars>
-                    <span class="title">Nombre del Hotel</span>
-                </div>
-                <span class="arrow_down"></span>
-            </div>
-            <form ngNativeValidate #f="ngForm" (ngSubmit)="searchHotels(f.value)">
-                
-                <div class="row content-filter">
-                    <div class="input_seach">
-                        <input type="text" name="name" [(ngModel)]="name" required placeholder="Ingrese el nombre del hotel">
+        <div class="filter_option">
+                <!-- (window:resize)="resize_card()" [ngClass]="customInnerWidth && customInnerWidth<=600 ? 'card_collapsed' : ''" -->
+            <div class="card" >
+                <div class="title_filter" (click)="collapseCard($event.target)">
+                    <div class="width_100">
+                        <app-stars [value]=1 [sm]="true" [icons]="['search']"></app-stars>
+                        <span class="title">Nombre del Hotel</span>
                     </div>
-                    <div class="filter">
-                        <button type="submit" class="button filter">Aceptar</button>
+                    <span class="arrow_down"></span>
+                </div>
+                <form ngNativeValidate #f="ngForm" (ngSubmit)="searchHotels(f.value)">
+                    
+                    <div class="row content-filter">
+                        <div class="input_seach">
+                            <input type="text" name="name" [(ngModel)]="name" (input)="validInput($event.target.value)" placeholder="Ingrese el nombre del hotel">
+                        </div>
+                        <div class="filter">
+                            <button type="submit" class="button filter">Aceptar</button>
+                        </div>
                     </div>
-                </div>
-            </form>
-        </div>
-        <div class="card">
-            <div class="title_filter" (click)="collapseCard($event.target)">
-                <div class="width_100">
-                    <app-stars [value]=1 [sm]="true"></app-stars>
-                    <span class="title">Estrellas</span>
-                </div>
-                <span class="arrow_down"></span>
+                </form>
             </div>
-            <section>
-                <div>
-                    <input type="checkbox" class="allstars-checkbox" (change)="valueStart($event.target)" name="option" value="6" [checked]="all"> Todas las estrellas<br>
+            <div class="card">
+                <div class="title_filter" (click)="collapseCard($event.target)">
+                    <div class="width_100">
+                        <app-stars [value]=1 [sm]="true" [color]="'#0679b3'"></app-stars>
+                        <span class="title">Estrellas</span>
+                    </div>
+                    <span class="arrow_down"></span>
                 </div>
-                <div *ngFor="let item of [5,4,3,2,1]" class="">
-                    <!-- <input type="checkbox" name="'option'+item" (change)="valueStart2($event.target)" [value]="item" [checked]="stars[item-1]"> -->
-                    <input type="checkbox" name="'option'+item" (change)="valueStart($event.target)" [value]="item" [checked]="checkValue(item)">
-                    <app-stars [value]="item" [sm]="true"></app-stars>
-                </div>
-            </section>
+                <section>
+                    <div>
+                        <input type="checkbox" class="allstars-checkbox" (change)="valueStart($event.target)" name="option" value="6" [checked]="all"> <span>Todas las estrellas</span>
+                    </div>
+                    <div *ngFor="let item of [5,4,3,2,1]" class="">
+                        <!-- <input type="checkbox" name="'option'+item" (change)="valueStart2($event.target)" [value]="item" [checked]="stars[item-1]"> -->
+                        <input type="checkbox" name="'option'+item" (change)="valueStart($event.target)" [value]="item" [checked]="checkValue(item)">
+                        <app-stars [value]="item" [sm]="true"></app-stars>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
 
@@ -52,10 +55,10 @@
                 <figure class="margin_off image" style="flex:25">
                     <img class="image_" [src]="(hotel.image | images  ) | safeImage" alt="Image">
                 </figure>
-                <div class="row column margin_off" style="flex:50; margin-left: 1.5rem;">
+                <div class="row column margin_off " style="flex:50; margin-left: 1.5rem;">
                     <h3 class="title margin_off">{{hotel.name}}</h3>
                     <app-stars [value]="hotel.stars"></app-stars>
-                    <app-stars [icons]="hotel.amenities"></app-stars>
+                    <app-stars [icons]="hotel.amenities" class="paddin_colum"></app-stars>
                 </div>
                 <div class="row column center middle dashed" style="flex:25">
                     <ng-container>
@@ -65,7 +68,7 @@
                             <span class="text_size">  {{hotel.price.$numberDecimal}}</span>
                         </div>
                     </ng-container>
-                    <a class="button">Ver hotel</a>
+                    <button class="button">Ver hotel</button>
                 </div>
             </div>
         </div>
