--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 app-root {
@@ -19,5 +24,9 @@ app-header {
 
 button {
   cursor: pointer;
+  user-select: none;
+}
+
+app-stars {
   user-select: none;
 }
