--- a/src/app/components/filters/filters.component.css
+++ b/src/app/components/filters/filters.component.css
@@ -1,191 +1,182 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 p {
-  margin: 0;
+    margin: 0;
 }
 
 .side {
-  flex: 25%;
-  padding: 10px;
+    flex: 25%;
+    padding: 10px;
 }
 
 .main {
-  flex: 75%;
-  padding: 10px;
+    flex: 75%;
+    padding: 10px;
 }
+
 
 /* .width_100 {
   width: 100%;
  padding-top: 0;
 } */
 
-
 .card {
-  /* Add shadows to create the "card" effect */
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  padding: 10px;
-  margin-bottom: 10px;
-  /* max-height: 15rem; */
+    /* Add shadows to create the "card" effect */
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    padding: 10px;
+    margin-bottom: 10px;
+    min-width: 21rem;
+    /* max-height: 15rem; */
 }
 
-
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .button {
-  text-decoration: none;
-  text-align: center;
-  padding: 10px;
-  font-weight: 600;
-  font-size: 1.5rem;
-  color: #ffffff;
-  background-color: rgba(15, 41, 116, 1);
-  max-width: 20rem;
-  min-width: 16rem;
-  border-radius: 6px;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: #ffffff;
+    background-color: rgba(15, 41, 116, 1);
+    max-width: 20rem;
+    min-width: 16rem;
+    border-radius: 6px;
 }
 
 .input_search {
-  display: flex;
-  margin-right: 1rem; 
-  width: calc(70% - 1rem);
-  /* justify-content: flex-end */
+    display: flex;
+    margin-right: 1rem;
+    width: calc(70% - 1rem);
+    /* justify-content: flex-end */
 }
-
 
 .input_search input {
-  padding: 0.5rem;
-  width: 100%;
+    padding: 0.5rem;
+    width: 100%;
 }
 
-.title_filter{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: 0.5rem;
-  cursor: pointer;
-  user-select: none;
-  font-weight: bold;
-  /* row center between middle */
+.title_filter {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 0.5rem;
+    cursor: pointer;
+    user-select: none;
+    font-weight: bold;
+    /* row center between middle */
 }
 
-.title_filter *, .side_title * {
-  pointer-events: none;
+.title_filter *,
+.side_title * {
+    pointer-events: none;
 }
 
 .side_title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .filter {
-  /* width: 100%; */
-  max-width: unset;
-  min-width: 30%;
-  border-radius: 0px;
-  font-size: 1rem;
-  border-style: none;
+    /* width: 100%; */
+    max-width: unset;
+    min-width: 30%;
+    border-radius: 0px;
+    font-size: 1rem;
+    border-style: none;
 }
 
 .filter button {
-  width: 100%;
+    width: 100%;
 }
 
-.filter_option{
-  visibility: visible;
+.filter_option {
+    visibility: visible;
 }
-
 
 .arrow_down {
- width : 0;
- height: 0;
- margin: 0.5rem;
- border-left: 0.3rem solid transparent;
- border-right: 0.3rem solid transparent;
- border-bottom: 0.3rem solid rgba(57, 119, 175, 1);
- /* border-top: 0.3rem solid rgba(57, 119, 175, 1); */
+    width: 0;
+    height: 0;
+    margin: 0.5rem;
+    border-left: 0.3rem solid transparent;
+    border-right: 0.3rem solid transparent;
+    border-bottom: 0.3rem solid rgba(57, 119, 175, 1);
+    /* border-top: 0.3rem solid rgba(57, 119, 175, 1); */
 }
 
-.card_collapsed .filter_option{
-  display: none;
+.card_collapsed .filter_option {
+    display: none;
 }
 
-.card_collapsed form{
-  display: none;
+.card_collapsed form {
+    display: none;
 }
 
-.card_collapsed .arrow_down{
-  border-bottom: 0rem ;
-  border-top: 0.3rem solid rgba(57, 119, 175, 1);
+.card_collapsed .arrow_down {
+    border-bottom: 0rem;
+    border-top: 0.3rem solid rgba(57, 119, 175, 1);
 }
 
-.card_collapsed section{
-  display: none;
+.card_collapsed section {
+    display: none;
 }
 
 .side_collapsed .filter_option {
- display: none;
+    display: none;
 }
 
-.card.side_title .arrow_down{
-  /* display: none; */
-  border-bottom: 0.3rem solid rgba(57, 119, 175, 1);
-  border-top: 0rem;
+.card.side_title .arrow_down {
+    /* display: none; */
+    border-bottom: 0.3rem solid rgba(57, 119, 175, 1);
+    border-top: 0rem;
 }
 
-.card_collapsed .side_title .arrow_down{
-  border-top: 0.3rem solid rgba(57, 119, 175, 1);
-  border-bottom: 0rem;
+.card_collapsed .side_title .arrow_down {
+    border-top: 0.3rem solid rgba(57, 119, 175, 1);
+    border-bottom: 0rem;
 }
-
 
 div {
-  max-width: 100%;
+    max-width: 100%;
 }
-
 
 form {
-  width: 100%;
+    width: 100%;
 }
 
-.content-filter{
-  width: 100;
+.content-filter {
+    width: 100;
 }
-
 
 .checks {
-  max-width: 10px;
+    max-width: 10px;
 }
 
-
 @media screen and (max-width: 600px) {
-  .row {
-      flex-direction: column;
-  }
-
-  .input_search {
-      width: 100%;
-      margin-bottom: 0.5rem;
-      max-width: unset; 
-  }
-
-  .card.side_title {
-      justify-content: center;
-      color: rgba(57, 119, 175, 1);
-      cursor: pointer;
-  }
- 
-  .side:first-child {
-    padding: 0;
-  }
-
-  .card {
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  }
+    .row {
+        flex-direction: column;
+    }
+    .input_search {
+        width: 100%;
+        margin-bottom: 0.5rem;
+        max-width: unset;
+    }
+    .card.side_title {
+        justify-content: center;
+        color: rgba(57, 119, 175, 1);
+        cursor: pointer;
+    }
+    .side:first-child {
+        padding: 0;
+    }
+    .card {
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    }
 }
