--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -4,8 +4,8 @@
         <span class="arrow_down" *ngIf="customInnerWidth<=600"></span>
     </div>
     <div class="filter_option">
-            <!-- (window:resize)="resize_card()" [ngClass]="customInnerWidth && customInnerWidth<=600 ? 'card_collapsed' : ''" -->
-        <div class="card" >
+        <!-- (window:resize)="resize_card()" [ngClass]="customInnerWidth && customInnerWidth<=600 ? 'card_collapsed' : ''" -->
+        <div class="card">
             <div class="title_filter" (click)="collapseCard($event.target)">
                 <div class="width_100">
                     <app-stars [value]=1 [sm]="true" [icons]="['search']"></app-stars>
@@ -14,7 +14,7 @@
                 <span class="arrow_down"></span>
             </div>
             <form ngNativeValidate #f="ngForm" (ngSubmit)="searchHotels(f.value)">
-                
+
                 <div class="row content-filter">
                     <div class="input_search">
                         <input type="text" name="name" [(ngModel)]="name" (input)="validInput($event.target.value)" placeholder="Ingrese el nombre del hotel">
@@ -37,10 +37,10 @@
                 <div>
                     <input type="checkbox" class="allstars-checkbox" (change)="valueStart($event.target)" name="option" value="6" [checked]="all"> <span>Todas las estrellas</span>
                 </div>
-                <div *ngFor="let item of [5,4,3,2,1]" class="row">
+                <div *ngFor="let item of [5,4,3,2,1]">
                     <!-- <input type="checkbox" name="'option'+item" (change)="valueStart2($event.target)" [value]="item" [checked]="stars[item-1]"> -->
                     <input type="checkbox" name="'option'+item" (change)="valueStart($event.target)" [value]="item" [checked]="checkValue(item)">
-                    <app-stars [value]="item" [sm]="true" ></app-stars>
+                    <app-stars [value]="item" [sm]="true"></app-stars>
                 </div>
             </section>
         </div>
